force-app/main/default/objects/Synchronisation_config_Field__mdt/Synchronisation_config_Field__mdt.object-meta.xml
<CustomObject>
    <label>Synchronisation config Field</label>
    <pluralLabel>Synchronisation config Fields</pluralLabel>
</CustomObject>