force-app/main/default/objects/Synchronisation_config_Field__mdt/fields/Object_2_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_2_Field__c</fullName>
    <label>Object 2 Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>