force-app/main/default/objects/Synchronisation_config_Field__mdt/fields/Synchronisation_config__c.field-meta.xml
<CustomField>
    <fullName>Synchronisation_config__c</fullName>
    <label>Synchronisation config</label>
    <referenceTo>SynchronisationConfig__mdt</referenceTo>
    <relationshipLabel>Synchronisation config Fields</relationshipLabel>
    <relationshipName>Synchronisation_config_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>